1999-10-28  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_write): don't send a
	0 length buffer.

1999-10-29  Michael Fulbright  <drmike@redhat.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_write): Actually
	load the image handler when we determine the image type.

	* src/gdk-pixbuf-io.[ch] (gdk_pixbuf_load_module): Changed the
	previously static function load_image_handler () to
	a public function gdk_pixbuf_load_module (). It is needed in
	gdk-pixbuf-loader.c to load image handler modules.  This function
	is different from gdk_pixbuf_get_module (), which only returns
	a reference to the required handler, because it actually loads
	the handler into memory. Both actions should possibly be combined
	in a convenience function since one w/o the other doesn't seem to
	make much sense.

1999-10-28  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-render.c (gdk_pixbuf_render_to_drawable): New
	function to render a portion of a pixbuf to a drawable.  Ignores
	alpha information and takes in a GC.
	(gdk_pixbuf_render_to_drawable_alpha): New function to render a
	portion of a pixbuf to a drawable.  It automatically creates a GC
	and a clipping mask for alpha pixbufs.

1999-10-28  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf.h: turned convenience macros into convenience
	functions so some error checking could be added. 

	* src/io-tiff.c (image_load_increment): started work on the tiff
	non-incremental loader.
	(image_begin_load): Finished the incremental loader. 

	* src/io-gif.c (image_load_increment): started work on the gif
	incremental loader.

	* src/gdk-pixbuf-io.h: Changed ModuleType to GdkPixbufModule.

1999-10-27  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-render.c (gdk_pixbuf_render_threshold_alpha): New
	function to threshold a pixbuf's alpha channel into a bitmap.

	* src/gdk-pixbuf.c (gdk_pixbuf_new): Fixed so that it will